--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         
       }
 
+      .kanan-banner img{
+        border-radius: 50%;
+      }
+
       .icon-banner {
         display: flex;
         margin-bottom: 30px;
@@ -79,20 +83,16 @@
             transformative solutions tailored just for you.
           </p>
           <div class="icon-banner">
-            <img
-              src="./images/facebook-app-symbol.png"
-              width="40"
-              class="facebook"
-            />
-            <img src="./images/twitter.png" width="40" class="twitter" />
-            <img src="./images/instagram.png" width="40" class="instagram" />
-            <img src="./images/linkedin.png" width="40" class="linkedin" />
+            <img src="https://cdn-icons-png.flaticon.com/128/20/20837.png" width="40" class="facebook"/>
+            <img src="https://cdn-icons-png.flaticon.com/128/733/733635.png" width="40" class="twitter" />
+            <img src="https://cdn-icons-png.flaticon.com/128/717/717392.png" width="40" class="instagram" />
+            <img src="https://cdn-icons-png.flaticon.com/128/2111/2111532.png" width="40" class="linkedin" />
           </div>
           <button>Explore now</button>
         </div>
 
         <div class="kanan-banner">
-            <img src="./images/Frame 1261153003.png" height="400">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDg0NIC5IU-IzGkhk_L6hd6_KOq8PjWMj9zw&s" width="400" height="400">
         </div>
       </div>
     </banner>
